samples/_failures_safe/1761659758_c7a887_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91bfe98c.c: In function ‘main’:
./samples/SAFE/__tmp_91bfe98c.c:162:17: error: expected declaration or statement at end of input
  162 |                 }
      |                 ^
./samples/SAFE/__tmp_91bfe98c.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91bfe98c.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91bfe98c.c:162:17: error: expected declaration or statement at end of input
